--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "vue-router": "^3.0.2",
+        "vue-server-renderer": "^2.5.22",
         "vuex": "^3.1.0"
     }
 }
